# ski_ver2

./: 2018-01-17-23-31-10.bag  command_real.sh
2/: offset.yaml
arm_module/: CMakeLists.txt  package.xml
arm_module/include/arm_module/: arm_module.h
arm_module/src/: arm_module.cpp  arm_module_state.cpp
atest_gui/: CMakeLists.txt  CMakeLists.txt.user.1fbfe80  mainpage.dox  package.xml
atest_gui/config/: gain.yaml
atest_gui/include/atest_gui/: main_window.hpp  qcustomplot.h  qnode.hpp
atest_gui/resources/: images.qrc
atest_gui/src/: main.cpp  main_window.cpp  qnode.cpp
atest_gui/src/qcustomplot/: qcustomplot.cpp
atest_gui/srv/: command.srv
atest_gui/ui/: main_window.ui
base_module/: CMakeLists.txt  package.xml
base_module/data/: ini_pose.yaml  init_offset_pose.yaml  init_pose.yaml
base_module/include/base_module/: base_module.h  base_module_state.h
base_module/src/: base_module.cpp  base_module_state.cpp
decision_module/: CMakeLists.txt  package.xml
decision_module/include/decision_module/: center_change_lib_leg.h  center_change_lib_waist.h  decision_module.h  decision_module_state.h
decision_module/src/: center_change_lib_leg.cpp  center_change_lib_waist.cpp  decision_module.cpp  decision_module_state.cpp
diana_balance_control/: CMakeLists.txt  package.xml
diana_balance_control/include/diana_balance_control/: balance_pd_control.h  balance_pid_control.h  control_function.h  cop_calculation_function.h  diana_balance_control.h  zmp_calculation_function.h
diana_balance_control/src/: balance_pd_control.cpp  balance_pid_control.cpp  control_function.cpp  cop_calculation_function.cpp  diana_balance_control.cpp  zmp_calculation_function.cpp
diana_msgs/: CMakeLists.txt  package.xml
diana_msgs/msg/: BalanceParam.msg  BalanceParamArm.msg  BalanceParamWaist.msg  CenterChange.msg  DesiredPoseCommand.msg  FlagData.msg  FlagDataArray.msg  FlagDataTop.msg  ForceTorque.msg  GateData.msg  GateDataArray.msg  JointFeedBackGain.msg  RegionOfInterestArray.msg
diana_sensors/: CMakeLists.txt  package.xml
diana_sensors/include/diana_sensors/: get_time.h
diana_sensors/src/: ft_sensor.cpp  ft_sensor.cpp_backup  ft_sensor.cpp_fail  get_time.cpp
heroehs_math/: CMakeLists.txt  package.xml
heroehs_math/include/heroehs_math/: control_function.h  end_point_to_rad_cal.h  fifth_order_trajectory_generate.h  kinematics.h
heroehs_math/src/: control_function.cpp  end_point_to_rad_cal.cpp  fifth_order_trajectory_generate.cpp  kinematics.cpp
motion_module/: CMakeLists.txt  package.xml
motion_module/data/: motion_6.yaml  motion_7.yaml
motion_module/data/turn/: initialize.yaml  pflug_bogen.yaml
motion_module/include/motion_module/: center_change_lib.h  motion_module.h
motion_module/log/: ini_pose.yaml
motion_module/src/: center_change_lib.cpp  motion_module.cpp  motion_module_state.cpp
offset_module/: CMakeLists.txt  package.xml
offset_module/include/offset_module/: offset_module.h
offset_module/msg/: dynamixel_info.msg
offset_module/src/: offset_module.cpp
offset_module/srv/: command.srv
pose_module/: CMakeLists.txt  package.xml
pose_module/include/pose_module/: pose_module.h
pose_module/src/: pose_module.cpp  pose_module_state.cpp
ski_main_manager/: CMakeLists.txt  package.xml
ski_main_manager/config/: dxl_init.yaml  offset.yaml  offset.yaml.save  ski_robot.robot
ski_main_manager/data/: motion_8.yaml  remote_time.yaml
ski_main_manager/data/cop/: control_value.yaml
ski_main_manager/data/turn/: break.yaml  carving.yaml  carving_ver2.yaml  carving_ver2_arm.yaml  carving_ver2_backup.yaml  first_carving.yaml  initialize.yaml  pflug_bogen.yaml  pflug_bogen_ver2.yaml  time_variables.yaml  time_variables_neutral.yaml
ski_main_manager/launch/: ski_main_manager.launch  ski_main_manager_gazebo.launch
ski_main_manager/src/: ski_main_manager_node.cpp
upper_body_module/: CMakeLists.txt  package.xml
upper_body_module/include/upper_body_module/: center_change_upper_lib.h  upper_body_module.h
upper_body_module/src/: center_change_upper_lib.cpp  upper_body_module.cpp  upper_body_module_state.cpp
