<?xml version="1.0"?>
<package>
  <name>diana_balance_control</name>
  <version>0.0.0</version>
  <description>
  	The diana_balance_control package
  	This balance control is based on PD control
  </description>

  <maintainer email="jaysong@todo.todo">jaysong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>robotis_math</run_depend>
</package>
